--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@
 .button_frame .button {
   grid-column: 1/-1;
   grid-row: 6;
+  cursor: pointer;
   font-family: Work Sans;
   font-style: normal;
   font-weight: bold;
